--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,15 @@
       <title>URL Shortener</title>
       <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="/public/style.css" rel="stylesheet" type="text/css">
+      <link href="/public/sstyle.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
    </head>
 
    <body>
-      <div class="container">
-        <h2>API Project: URL Shortener Microservice</h2>
-        <h3>User Story: </h3>
+      <div class="container mt-5">
+        <h2 class="display-4 text-center">API Project: URL Shortener Microservice</h2>
+        <hr />
+        <h3 class="mt-4 mb-3">User Story: </h3>
         <ol>
           <li>I can POST a URL to <code>[project_url]/api/shorturl/new</code> and I will receive a shortened URL in the JSON response.<br>Example : <code>{"original_url":"www.google.com","short_url":1}</code></li>
           <li>If I pass an invalid URL that doesn't follow the <code>http(s)://www.example.com(/more/routes)</code> format, the JSON response will contain an error like <code>{"error":"invalid URL"}</code><br>
@@ -20,28 +22,35 @@
           <li>When I visit the shortened URL, it will redirect me to my original link.</li>
         </ol>
         
-        <h3>Short URL Creation </h3>
-        <p>
+        <h3 class="mt-4 mb-3 text-center">Short URL Creation </h3>
+        <p class="text-center">
           example: <code>POST [project_url]/api/shorturl/new</code> - <code>https://www.google.com</code>
         </p>
-        <form action="api/shorturl/new" method="POST">
-          <label for="url_input">URL to be shortened</label>
-          <input id="url_input" type="text" name="url" value="https://www.freecodecamp.com">
-          <input type="submit" value="POST URL">
+        <form class="form-inline border justify-content-center p-4" action="api/shorturl/new" method="POST">
+          <label for="url_input" class="pr-3">URL to be shortened</label>
+          <div class="input-group">
+            <input id="url_input" type="text" name="url" value="https://www.google.com" class="form-control">
+            <input type="submit" value="POST URL" class="btn btn-success">
+          </div>
         </form>
-        <h3>Example Usage:</h3>
-        <a href="https://thread-paper.hyperdev.space/api/shorturl/3">
-          [this_project_url]/api/shorturl/3
-        </a>
-
-        <h3>Will Redirect to:</h3>
-        <p>https://forum.freecodecamp.com</p>
-      </div>
-      <div class="footer">
-        <p>
-          by <a href="http://www.freecodecamp.com">freeCodeCamp</a>
+        <h3 class="mt-4 mb-3 text-center">Example Usage:</h3>
+        <p class="text-center">
+          <a href="https://numerous-drop.glitch.me/api/shorturl/3">
+            [this_project_url]/api/shorturl/3
+          </a>
         </p>
+        <h3 class="mt-4 mb-3 text-center">Will Redirect to:</h3>
+        <p class="text-center">https://www.google.com</p>
       </div>
+      <div class="footer text-center">
+        <small>
+          by <a href="https://github.com/zenott">zenott</a>
+        </small>
+      </div>
+     
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
    </body>
 
 
